[gd_scene load_steps=5 format=3 uid="uid://b2ilhl36ywtp6"]

[ext_resource type="Script" uid="uid://dhpdowp6m0esr" path="res://ui/TradeStop/TradeStop.gd" id="1_bxlvv"]
[ext_resource type="Texture2D" uid="uid://dy2yjri7rutd8" path="res://assets/icons/hamburger.svg" id="2_cdst2"]
[ext_resource type="Texture2D" uid="uid://bv2t4opxlbjug" path="res://assets/icons/edit.svg" id="3_g76rl"]
[ext_resource type="Texture2D" uid="uid://dl5fcna2x8ql5" path="res://assets/icons/trash.svg" id="4_1ho2g"]

[node name="TradeStop" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_bxlvv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_cdst2")
expand_mode = 3

[node name="TownButton" type="OptionButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1

[node name="ModeButton" type="OptionButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
item_count = 3
selected = 0
popup/item_0/text = "dock"
popup/item_0/id = 0
popup/item_1/text = "repair"
popup/item_1/id = 1
popup/item_2/text = "skip"
popup/item_2/id = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="EditButton" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
mouse_filter = 1
text = "edit"
icon = ExtResource("3_g76rl")
expand_icon = true

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
mouse_filter = 1
text = "delete"
icon = ExtResource("4_1ho2g")
expand_icon = true

[node name="ContextMenu" type="PopupMenu" parent="."]
unique_name_in_owner = true
item_count = 3
item_0/text = "edit"
item_0/id = 0
item_1/text = "duplicate"
item_1/id = 1
item_2/text = "delete"
item_2/id = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/TownButton" to="." method="_on_town_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/ModeButton" to="." method="_on_mode_button_item_selected"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="id_pressed" from="ContextMenu" to="." method="_on_context_menu_id_pressed"]
